--- a/app/modules/manager/views/scripts/billing/agreements.phtml
+++ b/app/modules/manager/views/scripts/billing/agreements.phtml
@@ -783,6 +783,6 @@ $this->headScript()->appendScript($jScript, $type = 'text/javascript')
         <td>${data.date_begin:dateFormat}</td>
         <td>${data.date_end:dateFormat}</td>
         <td>${data.date_expires}</td>
-        <td><a href="<?=$this->baseUrl('manager/billing/agreement/id/');?>${id}">просмотр</a></td>
+        <td><a href="<?=$this->baseUrl('manager/billing/agreement/id/');?>${id}" target="_blank">просмотр</a></td>
     </tr>
 </script>
