--- a/app/modules/default/views/scripts/error/404.phtml
+++ b/app/modules/default/views/scripts/error/404.phtml
@@ -1,4 +1,4 @@
-<p><strong>Oops! 404: <?php echo $this->message ?></strong></p>
+<p style="text-transform: uppercase; font-weight: bold"><strong>Oops! 404: <?php echo $this->message ?></strong></p>
 <p>
-    Запрошенный ресурс или адрес не существует. За дополнительной информацией обратитесь к администраторам системы.
+    Запрошенный ресурс или URL-адрес не существует. За дополнительной информацией обратитесь, пожалуйста, к администраторам системы.
 </p>
