--- a/app/modules/account/views/scripts/access/login.phtml
+++ b/app/modules/account/views/scripts/access/login.phtml
@@ -1,11 +1,10 @@
-<h1>Авторизация</h1>
-<hr/>
+<p style="text-transform: uppercase; font-weight: bold">Авторизация</p>
 <p><em>Для продолжения работы в системе HelpMe, пожалуйста, авторизуйтесь</em></p>
 <div style="margin-top: 20px">
     <form method="post" action="<?=$this->url()?>">
         <p>
             <label class="required" for="account-login"><strong>Логин:</strong></label>
-            <input type="text" value="" id="account-login" name="account[login]" style="width: 90%">
+            <input type="text" value="" id="account-login" name="account[login]" style="width: 90%" >
         </p>
         <p>
             <label class="required" for="account-password"><strong>Пароль:</strong></label>
