--- a/app/modules/default/views/scripts/error/403.phtml
+++ b/app/modules/default/views/scripts/error/403.phtml
@@ -1,4 +1,4 @@
-<p><strong>Oops! 403: <?php echo $this->message ?></strong></p>
+<p style="text-transform: uppercase; font-weight: bold"><strong>Oops! 403: <?php echo $this->message ?></strong></p>
 <p>
     У вашего аккаунта отсутствуют права на просмотр или редактирование запрошенного ресурса.
 </p>
